# HORenderer-v.2

./: .gitignore  CMakeLists.txt  README.md
config/: CMakeLists.txt
lib/: CMakeLists.txt
resource/: CMakeLists.txt
resource/CreepCreature/: CreepCreature.mtl
resource/Cube/: cube.mtl
resource/Dummy-low/: Dummy-low.mtl
resource/Mug/: License.txt  Mug.mtl
resource/Nier2B/: Nier2b.mtl
resource/Sphere/: sphere.mtl
resource/Triangle/: triangle.mtl
src/app/: CMakeLists.txt
src/app/include/: debug.h
src/app/res/: WindowsModule.rc  resource.h
src/app/src/: main.cc
src/asset/: CMakeLists.txt
src/asset/include/: aab_bounding_volume.h  camera_object.h  game_object.h  mesh.h  mesh_generator.h  mesh_manager.h  scene.h  sphere_bounding_volume.h  transform.h  vertex.h
src/asset/src/: aab_bounding_volume.cc  camera_object.cc  game_object.cc  mesh.cc  mesh_generator.cc  mesh_manager.cc  scene.cc  sphere_bounding_volume.cc  transform.cc  vertex.cc
src/core/: CMakeLists.txt
src/core/input/include/: input_listener.h  input_manager.h  input_receiver.h  input_sender.h
src/core/input/src/: input_listener.cc  input_manager.cc  input_receiver.cc  input_sender.cc
src/core/math/: CMakeLists.txt
src/core/math/include/: affine_transform.h  euler_angle.h  frustum.h  interpolation_utils.h  linear_transform.h  math_utils.h  matrix2x2.h  matrix3x3.h  matrix4x4.h  plane.h  quaternion.h  quaternion_transform.h  vector2.h  vector3.h  vector4.h
src/core/math/src/: affine_transform.cc  euler_angle.cc  frustum.cc  interpolation_utils.cc  linear_transform.cc  math_utils.cc  matrix2x2.cc  matrix3x3.cc  matrix4x4.cc  plane.cc  quaternion.cc  quaternion_transform.cc  vector2.cc  vector3.cc  vector4.cc
src/core/time/include/: timer.h
src/core/time/src/: timer.cc
src/engine/: CMakeLists.txt
src/engine/color/include/: linear_rgb.h  srgb.h
src/engine/color/src/: linear_rgb.cc  srgb.cc
src/engine/include/: input_listener.h  input_manager.h  input_receiver.h  input_sender.h  mesh_generator.h  mesh_manager.h  renderer.h  renderer_settings.h  scene_manager.h  srgb.h  timer.h
src/engine/input/include/: input_listener.h  input_manager.h  input_receiver.h  input_sender.h
src/engine/input/src/: input_listener.cc  input_manager.cc  input_receiver.cc  input_sender.cc
src/engine/light/include/: ambient_light.h  directional_light.h  light.h  point_light.h
src/engine/light/src/: ambient_light.cc  directional_light.cc  light.cc  point_light.cc
src/engine/scene/include/: scene.h  scene_manager.h
src/engine/scene/src/: scene.cc  scene_manager.cc
src/engine/src/: input_listener.cc  input_manager.cc  input_receiver.cc  input_sender.cc  mesh_generator.cc  mesh_manager.cc  renderer.cc  renderer_settings.cc  scene_manager.cc  srgb.cc  timer.cc
src/graphics/: CMakeLists.txt
src/graphics/color/include/: linear_rgb.h  srgb.h
src/graphics/color/src/: linear_rgb.cc  srgb.cc
src/graphics/rendering_pipeline/pipeline_components/include/: clipper.h  depth_tester.h  face_culler.h  fragment_shader.h  frame_writer.h  frustum_culler.h  perspective_divider.h  primitive_assembler.h  rasterizer.h  scissor_tester.h  vertex_shader.h  vertex_specifier.h  viewport_transformer.h
src/graphics/rendering_pipeline/pipeline_components/src/: clipper.cc  depth_tester.cc  face_culler.cc  fragment_shader.cc  frame_writer.cc  frustum_culler.cc  perspective_divider.cc  primitive_assembler.cc  rasterizer.cc  scissor_tester.cc  vertex_shader.cc  vertex_specifier.cc  viewport_transformer.cc
src/graphics/rendering_pipeline/pipeline_objects/include/: color_buffer.h  depth_buffer.h  edge_function.h  fragment.h  frame_buffer.h  line.h  point.h  primitive.h  transformed_vertex.h  triangle.h
src/graphics/rendering_pipeline/pipeline_objects/src/: color_buffer.cc  depth_buffer.cc  edge_function.cc  fragment.cc  frame_buffer.cc  line.cc  point.cc  primitive.cc  transformed_vertex.cc  triangle.cc
src/graphics/rendering_pipeline/stages/include/: fragment_processing.h  per_sample_processing.h  pre_render.h  rasterization.h  vertex_post_processing.h  vertex_processing.h  vertex_specification.h
src/graphics/rendering_pipeline/stages/src/: fragment_processing.cc  per_sample_processing.cc  pre_render.cc  rasterization.cc  vertex_post_processing.cc  vertex_processing.cc  vertex_specification.cc
src/graphics/rendering_pipeline/system/include/: pipeline_enum.h  pipeline_resources_manager.h  pipeline_settings.h  rendering_pipeline.h
src/graphics/rendering_pipeline/system/src/: pipeline_resources_manager.cc  pipeline_settings.cc  rendering_pipeline.cc
src/graphics/resource/include/: aab_bounding_volume.h  graphic_resource_manager.h  material.h  material_builder.h  mesh.h  model.h  model_loader.h  model_node.h  sphere_bounding_volume.h  texture.h  texture_type.h  vertex.h
src/graphics/resource/src/: aab_bounding_volume.cc  graphic_resource_manager.cc  material.cc  material_builder.cc  mesh.cc  model.cc  model_loader.cc  model_node.cc  sphere_bounding_volume.cc  texture.cc  vertex.cc
src/graphics/resources/src/: model_loader.cc
src/math/: CMakeLists.txt
src/math/include/: affine_transform.h  euler_angle.h  frustum.h  interpolation_utils.h  linear_transform.h  math_utils.h  matrix2x2.h  matrix3x3.h  matrix4x4.h  plane.h  quaternion.h  quaternion_transform.h  vector2.h  vector3.h  vector4.h
src/math/src/: affine_transform.cc  euler_angle.cc  frustum.cc  interpolation_utils.cc  linear_transform.cc  math_utils.cc  matrix2x2.cc  matrix3x3.cc  matrix4x4.cc  plane.cc  quaternion.cc  quaternion_transform.cc  vector2.cc  vector3.cc  vector4.cc
src/renderer/: CMakeLists.txt
src/renderer/include/: renderer.h  renderer_settings.h
src/renderer/src/: renderer.cc  renderer_settings.cc
src/rendering_pipeline/: CMakeLists.txt
src/rendering_pipeline/pipeline/include/: pipeline_settings.h  (+2 more)
src/scene/: CMakeLists.txt
src/tools/: CMakeLists.txt
src/tools/include/: debug.h
src/tools/src/: debug.cc
src/windows/: CMakeLists.txt
src/windows/include/: key_macro.h  windows_app.h
src/windows/src/: windows_app.cc
(+87 files in other folders)
